# avarus

client/: client.lua
server/: Cargo.toml  Makefile  order.txt  pronouns.txt
server/src/: blocks.rs  construct.rs  depot.rs  fell.rs  googleforms.rs  main.rs  mine.rs  names.rs  paths.rs  safe_kill.rs  tasks.rs  turtle.rs  turtle_api.rs
