[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
axum = "0.7.2"
bit-struct = "0.3.2"
const_format = "0.2.32"
erased-serde = "0.4.1"
feistel_rs = "0.1.0"
future-parking_lot = "0.3.3"
hilbert_index = "0.2.0"
hyper = "1.0.1"
hyper-util = "0.1.1"
indoc = "2.0.4"
nalgebra = { version = "0.32.3", features = ["serde-serialize"] }
parking_lot = { version = "0.11", features = ["serde"] }
pathfinding = "4.6.0"
rstar = { version = "0.11.0", features = ["serde"] }
rustmatica = "0.1.1"
serde = { version = "1.0.193", features = ["rc"] }
serde_json = "1.0.108"
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["util", "timeout", "load-shed", "limit"] }
tower-http = { version = "0.5.0", features = [
    "add-extension",
    "auth",
    "compression-full",
    "limit",
    "trace",
] }
tower-layer = "0.3.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
typetag = "0.2.14"
