[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
axum = "0.7.2"
bincode = "1.3.3"
bit-struct = "0.3.2"
const_format = "0.2.32"
erased-serde = "0.4.1"
feistel_rs = "0.1.0"
future-parking_lot = "0.3.3"
hilbert_index = "0.2.0"
hyper = "1.0.1"
hyper-util = "0.1.1"
indoc = "2.0.4"
nalgebra = { version = "0.32.3", features = ["serde-serialize"] }
opentelemetry = "0.21.0"
opentelemetry-stdout = { version = "0.2.0", features = ["trace"] }
opentelemetry_sdk = { version = "0.21.1", features = ["logs", "rt-tokio"] }
parking_lot = { version = "0.11", features = ["serde"] }
pathfinding = "4.6.0"
rstar = { version = "0.11.0", features = ["serde"] }
rustmatica = "0.1.1"
serde = { version = "1.0.193", features = ["rc", "derive"] }
serde_json = "1.0.108"
time = { version = "0.3.31", features = ["serde"] }
tokio = { version = "1.0", features = ["full", "tracing"] }
tower = { version = "0.4", features = ["util", "timeout", "load-shed", "limit"] }
tower-http = { version = "0.5.0", features = [
    "add-extension",
    "auth",
    "compression-full",
    "limit",
    "trace",
] }
tower-layer = "0.3.2"
tracing = "0.1"
tracing-opentelemetry = "0.22.0"
tracing-subscriber = { version = "0.3.18", features = ["registry", "std"] }
typetag = "0.2.14"
ucnlnav = { git = "https://github.com/ucnl/UCNLNav.git", version = "0.1.0" }
